--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,5 @@
 body {
     background-color: #0f0f0f;
 }
-html, body { height: 100%; }
+html, body { height: 100%; width:100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
