--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <mat-slider min="5" max="100" step="1" [(value)]="value"></mat-slider>{{value}}
-<canvas #canvas width="1920" height="1080"></canvas>
+<canvas #canvas></canvas>
