--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
-<mat-slider min="5" max="100" step="1" [(value)]="value"></mat-slider>{{value}}
+<mat-card>
+    <mat-card-title>Swamp Bubbles (by Villainous_rm)</mat-card-title>
+    <mat-card-actions>
+        Size : <mat-slider thumbLabel min="5" max="100" step="1" [(value)]="size"></mat-slider>
+        Speed : <mat-slider thumbLabel min="100" max="1000" step="10" [(value)]="speed"></mat-slider>
+        <button color="accent" mat-raised-button (click)="clear()">Clear</button>
+    </mat-card-actions>
+</mat-card>
+
 <canvas #canvas></canvas>
