--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
-body {
+html, body { 
+    height: 100%;
+    width:100%; 
     background-color: #0f0f0f;
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-html, body { height: 100%; width:100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
